--- a/templates/default/s3cfg.erb
+++ b/templates/default/s3cfg.erb
@@ -1,4 +1,4 @@
-access_key = <%= node[:s3cmd][:aws_access_key] %>
+access_key = <%= @credentials[:aws_access_key] %>
 acl_public = False
 bucket_location = US
 cloudfront_host = cloudfront.amazonaws.com
@@ -13,7 +13,7 @@ get_continue = False
 gpg_command = /usr/local/bin/gpg
 gpg_decrypt = %(gpg_command)s -d --verbose --no-use-agent --batch --yes --passphrase-fd %(passphrase_fd)s -o %(output_file)s %(input_file)s
 gpg_encrypt = %(gpg_command)s -c --verbose --no-use-agent --batch --yes --passphrase-fd %(passphrase_fd)s -o %(output_file)s %(input_file)s
-gpg_passphrase = <%= node[:s3cmd][:gpg_passphrase] %>
+gpg_passphrase = <%= @credentials[:gpg_passphrase] %>
 guess_mime_type = True
 host_base = s3.amazonaws.com
 host_bucket = %(bucket)s.s3.amazonaws.com
@@ -25,7 +25,7 @@ proxy_host =
 proxy_port = 0
 recursive = False
 recv_chunk = 4096
-secret_key = <%= node[:s3cmd][:aws_secret_key] %>
+secret_key = <%= @credentials[:aws_secret_key] %>
 send_chunk = 4096
 simpledb_host = sdb.amazonaws.com
 skip_existing = False
